Fpl/Fpl/FplParser.fs
/// This module contains the FPL parser producing an abstract syntax tree out of a given FPL code 
module FplParser
open System.Text.RegularExpressions
open FplPrimitives
open FplGrammarTypes
open ErrDiagnostics
open FParsec

(* MIT License

Copyright (c) 2024+ bookofproofs

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. 

*)

/// A helper parser that consume any input and can be combined with existing parsers to enrich them with 
/// the parsing position.
let private _position: Parser<_,_> = fun stream -> Reply stream.Position

/// Takes the parser `p` and returns a tuple with it starting parsing position
let private _startingPosition p = _position .>>. p

/// Takes the parser `p` and returns a tuple with it starting parsing position
let private _endingPosition p = 
    let result = p .>>. _position
    result 
    >>= fun (p, pos) ->
    preturn (pos, p)


/// Takes the parser `p` and returns a tuple of its result, together with its starting and ending position.
let positions (p: Parser<_,_>): Parser<Positions * _,_> =
    pipe2
        (_position .>>. p)
        (_position)
        (fun (startPos, result) endPos -> 
            let pos1 = Position("", startPos.Index, startPos.Line, startPos.Column)
            let pos2 = Position("", endPos.Index, endPos.Line, endPos.Column)
            (Positions(pos1, pos2), result)
        )


(* Literals *)

let leftBrace = skipChar '{' >>. spaces
let leftBracePos = positions (opt (skipChar '{')) .>> spaces |>> Ast.LeftBraceOpt
let rightBrace = positions (opt (skipChar '}')) |>> Ast.RightBraceOpt
let leftParen = skipChar '(' >>. spaces 
let rightParen = skipChar ')' 
let comma = skipChar ',' >>. spaces 
let dot = skipChar '.' |>> Ast.Dot
let colon = skipChar ':' .>> spaces 
let colonEqual = skipString ":=" >>. spaces 
let at = pchar '@'
let case = skipChar '|' >>. spaces
let elseCase = skipChar '?' >>. spaces
let leftBracket = skipChar '[' >>. spaces 
let rightBracket = skipChar ']'
let tilde = skipChar '~' .>> spaces
let semiColon = skipChar ';' >>. spaces
let exclamationMark = skipChar '!' 
let toArrow = skipString "->"
let vDash = skipString "|-"
let quote = skipChar '"' 
let slash = skipChar '/' 

(* Whitespaces and Comments *)

let IW = spaces <?> "<whitespace>"

let SW = spaces1 <?> "<significant whitespace>"

let attemptSW = SW <|> (IW .>> attempt (lookAhead (choice [skipChar '('; skipChar ')'; skipChar '{'; skipChar ','; skipChar ';'; skipChar '[' ])))

// -----------------------------------------------------
// Extensions of the FPL language allow syntax injections as long as they match the following regex expression.
// The FPL interpreter will try to match extensionString after the @ Literal
// by tryoing out the regex expressions of all user-declared ExtensionBlocks (in their declaration order)
// until none or the first of then matches this string. Then, the matched string will get the named type of the ExtensionBlock.
let extensionString = regex @"[^,;\s()\[\]{}\:]+" <?> "<extensionString>" 
let extension = positions (at >>. extensionString) |>> Ast.Extension

(* Identifiers *)


let IdStartsWithSmallCase = regex @"[a-z]\w*" 
let idStartsWithCap = (regex @"[A-Z]\w*") <?> "<PascalCaseId>"
let pascalCaseId = positions (opt idStartsWithCap) |>> Ast.PascalCaseId

let namespaceIdentifier = positions (sepBy1 pascalCaseId dot) .>> IW |>> Ast.NamespaceIdentifier
let predicateIdentifier = positions (idStartsWithCap) |>> Ast.PredicateIdentifier 

let alias = positions (skipString LiteralAlias >>. SW >>. opt idStartsWithCap) |>> Ast.Alias
let star = positions (skipChar '*') |>> Ast.Star

let aliasedNamespaceIdentifier = positions (namespaceIdentifier .>>. opt (alias <|> star)) |>> Ast.AliasedNamespaceIdentifier
let tplRegex = Regex(@"^(tpl|template)(([A-Z]\w*)|\d*)$", RegexOptions.Compiled)


let withBacktrackedError p: Parser<_,_> =
    fun stream ->
        let mutable oldState = stream.State
        match p stream with
        | Success(result, restInput, userState) ->
            Reply(result, restInput)
        | _ ->
            Reply(oldState)

let variableX: Parser<string,unit> = 
    IdStartsWithSmallCase 
    <?> "<variable>" 
    |> resultSatisfies (fun s -> keyWordSet.Contains(s) |> not) "Expecting: <variable (got keyword)>" 
    |> resultSatisfies (fun s -> tplRegex.IsMatch(s) |> not) "Expecting: <variable (got template)>"
    >>= (fun s -> preturn s) 

let variable = positions variableX |>> Ast.Var 

let variableList = (sepBy1 (variable .>> IW) comma) .>> IW

let keywordSelf = positions (skipString LiteralSelf) .>> IW |>> Ast.Self
let keywordParent = positions (skipString LiteralParent) .>> IW |>> Ast.Parent
let keywordBaseClassReference = skipString LiteralBase .>> IW
let keywordIndex = positions (skipString LiteralIndL <|> skipString LiteralInd) |>> Ast.IndexType


(* FplBlock-related Keywords *)
let keywordPremise = (skipString LiteralPreL <|> skipString LiteralPre) >>. IW 
let keywordConclusion = (skipString LiteralConL <|> skipString LiteralCon) >>. IW


(* Statement-related Keywords *)
let keywordDel = skipString LiteralDelL <|> skipString LiteralDel 
let keywordFor = skipString LiteralFor .>> SW 
let keywordIn = skipString LiteralIn .>> SW 
let keywordCases = skipString LiteralCases .>> IW 
let keywordMapCases = skipString LiteralMapCases .>> IW 
let keywordAssert = (skipString LiteralAssert <|> skipString LiteralAss) .>> SW

(* Predicate-related Keywords *)
let keywordUndefined = positions (skipString LiteralUndefL <|> skipString LiteralUndef) .>> IW |>> Ast.Undefined
let keywordTrue = positions (skipString LiteralTrue) .>> IW  |>> Ast.True  
let keywordFalse = positions (skipString LiteralFalse) .>> IW |>>  Ast.False  
let keywordByDef = pstring LiteralByDef 
let keywordByAx = pstring LiteralByAx 
let keywordByInf = pstring LiteralByInf
let keywordByConj = pstring LiteralByConj
let keywordByCor = pstring LiteralByCor
let byModifier = choice [keywordByAx; keywordByConj; keywordByCor; keywordByDef; keywordByInf] .>> SW 
let keywordAnd = choice [skipString LiteralAnd; skipString LiteralAndSymbol] .>> IW 
let keywordOr = choice  [skipString LiteralOr; skipString LiteralOrSymbol] .>> IW 
let keywordImpl = choice [skipString LiteralImpl; skipString LiteralImplSymbol] .>> IW 
let keywordIif = choice [skipString LiteralIif; skipString LiteralIifSymbol] .>> IW 
let keywordXor = choice [skipString LiteralXor; skipString LiteralXorSymbol] .>> IW 
let keywordNot = choice [skipString LiteralNot .>> attemptSW; skipString LiteralNotSymbol .>> IW]  
let keywordAll = choice [skipString LiteralAll .>> SW; skipString LiteralAllSymbol .>> IW]  
let keywordEx = choice [skipString LiteralEx .>> SW; skipString LiteralExSymbol .>> IW]
let keywordExN = skipString LiteralExN .>> IW
let keywordExNSymbolic = skipString LiteralExNSymbol 
let keywordIs = skipString LiteralIs .>> attemptSW 


// Via templates, FPL supports generic types, which make it possible to define abstract mathematical
// objects and their properties that defer the concrete
// specification of one or more types until the definition or method is declared and instantiated by
// client code
let keywordTemplate = (pstring LiteralTplL <|> pstring LiteralTpl) 

let templateTail = choice [ idStartsWithCap; (regex @"\d+") ]

let templateWithTail = (many1Strings2 (pstring "template" <|> pstring LiteralTpl) templateTail) 

let keywordObject = positions (skipString LiteralObjL <|> skipString LiteralObj) |>> Ast.ObjectType 

let templateType = positions ((attempt templateWithTail) <|> keywordTemplate) |>>  Ast.TemplateType

let keywordPredicate = positions (skipString LiteralPredL <|> skipString LiteralPred) |>> Ast.PredicateType
let keywordFunction = positions (skipString LiteralFuncL <|> skipString LiteralFunc) |>> Ast.FunctionalTermType


let theoryNamespace = aliasedNamespaceIdentifier <|> namespaceIdentifier .>> IW

let keywordUses = (skipString LiteralUses) .>> SW
let usesClause = positions (keywordUses >>. theoryNamespace) |>> Ast.UsesClause

(* Signatures, Variable Declarations, and Types, and Coordinates *)
// convention: All syntax production rules of FPL syntax extensions have to start with LiteralExt, followed by
// a Pascal Case id.
// This ensures that they will not be mixed-up with original FPL ebnf productions
// that are all PascalCase as well as FPL keywords, that are all small case.

let dollarDigits = positions (regex "\$" >>. puint32 <?> "<dollarDigits>") |>> Ast.DollarDigits

let selfOrParent = positions (choice [keywordSelf ; keywordParent]) |>> Ast.SelfOrParent

////// resolving recursive parsers
let statementList, statementListRef = createParserForwardedToRef()
let primePredicate, primePredicateRef = createParserForwardedToRef()
let predicate, predicateRef = createParserForwardedToRef()
let predicateList, predicateListRef = createParserForwardedToRef()
let predicateWithQualification, predicateWithQualificationRef = createParserForwardedToRef()
let paramTuple, paramTupleRef = createParserForwardedToRef()

let coord = choice [ predicateWithQualification; dollarDigits ] .>> IW 

// infix operators like the equality operator 
let objectSymbol = positions ( objectMathSymbols ) |>> Ast.ObjectSymbol

let fplIdentifier = choice [ selfOrParent ; variable ; predicateIdentifier; extension; objectSymbol ] 

let coordList = (sepBy1 coord comma) .>> IW

let bracketedCoords = positions (leftBracket >>. coordList .>> rightBracket) |>> Ast.BrackedCoordList

let namedVariableDeclarationList, namedVariableDeclarationListRef = createParserForwardedToRef()

let keywordExtension = (skipString LiteralExtL <|> skipString LiteralExt) .>> SW

let extensionName = positions (idStartsWithCap) |>> Ast.ExtensionName


// The classType is the last type in FPL we can derive FPL classes from.
// It therefore excludes the in-built FPL-types keywordPredicate, keywordFunction, and keywordIndex
// to restrict it to pure objects.
// In contrast to variableType which can also be used for declaring variables 
// in the scope of FPL building blocks

let mapping, mappingRef = createParserForwardedToRef()
let predicateType = positions (keywordPredicate .>>. opt paramTuple) |>> Ast.CompoundPredicateType
let functionalTermType = positions (keywordFunction .>>. opt (paramTuple .>>. (IW >>. mapping))) |>> Ast.CompoundFunctionalTermType

let simpleVariableType = positions (choice [ keywordIndex; keywordObject; predicateIdentifier; templateType; functionalTermType; predicateType ]) |>> Ast.SimpleVariableType
// indexAllowedType is used to restrict Fpl types allowed to be used as indexes in arrayType
let indexAllowedType = positions (choice [ keywordIndex; keywordObject; predicateIdentifier; templateType; keywordPredicate; keywordFunction]) |>> Ast.IndexAllowedType

let indexAllowedTypeList = (sepBy1 (indexAllowedType .>> IW) comma) .>> IW
// arrayType is used to define arrays in Fpl
let arrayType = positions (star >>. IW >>. simpleVariableType .>>. (IW >>. leftBracket >>. indexAllowedTypeList .>> rightBracket)) |>> Ast.ArrayType
let variableType = choice [ simpleVariableType; arrayType ]

let namedVariableDeclaration = positions ((variableList .>> colon) .>>. variableType .>> IW) |>> Ast.NamedVarDecl
namedVariableDeclarationListRef.Value <- sepBy namedVariableDeclaration comma

paramTupleRef.Value <- positions ((leftParen >>. IW >>. namedVariableDeclarationList) .>> (IW .>> rightParen)) |>> Ast.ParamTuple
let simpleSignature = pascalCaseId .>> IW 

let localizationString = positions (regex "[^\"\n]*") <?> "<language-specific string>" |>> Ast.LocalizationString

let keywordSymbol = pstring LiteralSymbol .>> IW
let objectSymbolString = pchar '"' >>. objectMathSymbols .>> pchar '"'
let infixString = pchar '"' >>. infixMathSymbols .>> pchar '"'
let keywordInfix = pstring LiteralInfix >>. IW
let postfixString = pchar '"' >>. postfixMathSymbols .>> pchar '"' 
let keywordPostfix = pstring LiteralPostFix >>. IW
let prefixString = pchar '"' >>. prefixMathSymbols .>> pchar '"' 
let keywordPrefix = pstring LiteralPrefix >>. IW
let userDefinedObjSym = positions (keywordSymbol >>. objectSymbolString) .>> IW |>> Ast.Symbol
let precedence = positions (pint32) .>> IW |>> Ast.Precedence

let userDefinedInfix = positions (keywordInfix >>. (infixString .>>. (IW >>. precedence))) .>> IW |>> Ast.Infix
let userDefinedPostfix = positions (keywordPostfix >>. postfixString) .>> IW |>> Ast.Postfix
let userDefinedPrefix = positions (keywordPrefix >>. prefixString) .>> IW |>> Ast.Prefix
let userDefinedSymbol = opt (attempt (IW >>. choice [userDefinedPrefix; userDefinedInfix; userDefinedPostfix ]))

(* Statements *)
let argumentTuple = positions ((leftParen >>. predicateList) .>> (IW .>> rightParen)) |>> Ast.ArgumentTuple 

let fplDelegate = positions (keywordDel >>. dot >>. idStartsWithCap .>>. (IW >>. argumentTuple)) |>> Ast.Delegate

let spacesRightBrace = (IW >>. rightBrace) 

let keywordReturn = IW >>. (skipString LiteralRetL <|> skipString LiteralRet) .>> SW 


let caseElse = positions (elseCase >>. IW >>. statementList .>> IW)  |>> Ast.CaseElse
let caseSingle = positions ((case >>. predicate .>> colon) .>>. statementList) |>> Ast.CaseSingle
let caseSingleList = many1 (IW >>. caseSingle)
let casesStatement = positions (((keywordCases >>. leftParen >>. IW >>. caseSingleList .>>. caseElse .>> rightParen))) |>> Ast.Cases

let mapCaseElse = positions (elseCase >>. IW >>. predicate .>> IW) |>> Ast.MapCaseElse
let mapCaseSingle = positions ((case >>. predicate .>> colon) .>>. (IW >>. predicate)) |>> Ast.MapCaseSingle
let mapCaseSingleList = many1 (IW >>. mapCaseSingle)
let mapCases = positions (((keywordMapCases >>. leftParen >>. IW >>. mapCaseSingleList .>>. mapCaseElse .>> rightParen))) |>> Ast.MapCases

let assignmentStatement = positions ((predicateWithQualification .>> IW .>> colonEqual) .>>. predicate) |>> Ast.Assignment

let inEntity = keywordIn >>. positions (predicateWithQualification) .>> IW |>> Ast.InEntity

let entityInDomain = ( variable .>> IW .>>. inEntity ) .>> IW
let forInBody = (entityInDomain .>> IW) .>>. (leftBrace >>. IW >>. statementList) .>> (IW >>. rightBrace)
let forStatement = positions (keywordFor >>. forInBody) |>> Ast.ForIn

//// Difference of assertion to an axiom: axiom is named predicate, while an assertion uses a predicated to assert it.
//// Difference of assertion to a mandatory property: a mandatory property introduces a completely new identifier inside
//// the scope of a definition. An assertion uses a predicate referring to existing identifiers in the whole theory
//// Difference of assertion to assume: the latter will be used only in the scope of proofs
let assertionStatement = positions (keywordAssert >>. predicate) |>> Ast.Assertion
let inheritedClassType = predicateIdentifier
let baseConstructorCall = positions (keywordBaseClassReference >>. dot >>. (inheritedClassType .>> IW).>>. argumentTuple .>> IW) |>> Ast.BaseConstructorCall

let statement = 
    IW >>. (choice [
        baseConstructorCall
        casesStatement
        mapCases
        assertionStatement
        forStatement
        assignmentStatement
    ]) .>> IW

statementListRef.Value <- many statement

(* Predicates *)
let optionalSpecification = opt (choice [bracketedCoords; argumentTuple])
let predicateWithOptSpecification = positions (fplIdentifier .>>. optionalSpecification) |>> Ast.PredicateWithOptSpecification
let dottedPredicate = positions (dot >>. predicateWithOptSpecification) |>> Ast.DottedPredicate
let qualificationList = positions (many dottedPredicate) |>> Ast.QualificationList
let dollarDigitList = many1 dollarDigits
let referencingIdentifier = positions (predicateIdentifier .>>. dollarDigitList) .>> IW |>> Ast.ReferencingIdentifier
let referenceToProofOrCorollary = positions referencingIdentifier |>> Ast.ReferenceToProofOrCorollary

predicateWithQualificationRef.Value <- predicateWithOptSpecification .>>. qualificationList |>> Ast.PredicateWithQualification 


primePredicateRef.Value <- choice [
    keywordTrue
    keywordFalse
    keywordUndefined
    fplDelegate 
    dollarDigits
    attempt referenceToProofOrCorollary
    predicateWithQualification
    objectSymbol
]

let argumentIdentifier = positions (regex @"\w+\.") <?> "<argument identifier>" |>> Ast.ArgumentIdentifier
let refArgumentIdentifier = positions (regex @"\w+") <?> "<refargument identifier>" |>> Ast.RefArgumentIdentifier
let justificationIdentifier = positions (opt byModifier .>>. predicateIdentifier .>>. opt dollarDigitList .>>. opt (colon >>. refArgumentIdentifier)) |>> Ast.JustificationIdentifier
let byDef = positions (keywordByDef >>. SW >>. variable) |>> Ast.ByDef

let justificationReference = choice [
    attempt byDef
    justificationIdentifier
    refArgumentIdentifier
]

let twoPredicatesInParens = (leftParen >>. predicate) .>>. (comma >>. predicate) .>> rightParen 
let twoPredicatesWithInfix p = (dot >>. (predicate .>> p) .>>. predicate)
let chooseBinaryOp p = choice [
        attempt (twoPredicatesWithInfix p)
        p >>. twoPredicatesInParens
    ]

let conjunction = positions (chooseBinaryOp keywordAnd)  |>> Ast.And
let disjunction = positions (chooseBinaryOp keywordOr) |>> Ast.Or
let exclusiveOr = positions (chooseBinaryOp keywordXor) |>> Ast.Xor
let implication = positions (chooseBinaryOp keywordImpl) |>> Ast.Impl
let equivalence = positions (chooseBinaryOp keywordIif) |>> Ast.Iif
let negation = positions (keywordNot >>. predicate) |>> Ast.Not

let all = positions ((keywordAll >>. namedVariableDeclarationList) .>>. (leftBracePos .>>. predicate .>>. rightBrace)) |>> Ast.All
let exists = positions ((keywordEx >>. namedVariableDeclarationList) .>>. (leftBracePos .>>. predicate .>>. rightBrace)) |>> Ast.Exists

let existsNTimes = choice [
        attempt (keywordExNSymbolic .>> SW) |>> Ast.Exists1 
        keywordExNSymbolic >>. positions puint32 .>> SW |>> Ast.DollarDigits 
    ] 

let existsTimeNQuantifier = choice [
    (keywordExN >>. dollarDigits .>> SW)
    existsNTimes
]

let existsTimesN = positions ((existsTimeNQuantifier .>>. namedVariableDeclarationList) .>>. (leftBracePos .>>. predicate .>>. rightBrace)) |>> Ast.ExistsN
let isOp = choice [
    attempt (dot >>. (predicate .>> keywordIs) .>>. variableType) 
    (keywordIs >>. leftParen >>. predicate .>> IW) .>>. (comma >>. variableType) .>> rightParen
    ]
let isOperator = positions isOp |>> Ast.IsOperator

// infix operators like the equality operator 
let infixOp = positions ( infixMathSymbols ) .>> attemptSW |>> Ast.InfixOperator

let pWithSep p separator =
    let combinedParser = pipe2 p (opt separator) (fun a b -> (a, b))
    combinedParser |> many

let infixOperation = positions (leftParen >>. pWithSep predicate infixOp .>> rightParen) |>> Ast.InfixOperation

// A compound Predicate has its own boolean expressions to avoid mixing up with Pl0Propositions
let compoundPredicate = choice [
    infixOperation
    conjunction
    disjunction
    implication
    equivalence
    exclusiveOr
    negation
    all
    existsTimesN
    exists
    isOperator
]

let postfixOp = positions ( postfixMathSymbols ) .>> IW |>> Ast.PostfixOperator
let prefixOp = positions ( prefixMathSymbols ) .>> IW |>> Ast.PrefixOperator
let expression = positions (opt prefixOp .>>. choice [compoundPredicate; primePredicate; mapCases] .>>. opt postfixOp .>>. optionalSpecification .>>. qualificationList) .>> IW |>> Ast.Expression

predicateRef.Value <- expression

predicateListRef.Value <- sepBy predicate comma



(* FPL building blocks *)
let keywordDeclaration = (skipString LiteralDecL <|> skipString LiteralDec) .>> SW 

let varDecl = tilde >>. namedVariableDeclaration
let varDeclBlock = positions (IW >>. keywordDeclaration >>. (many ((varDecl <|> statement) .>> IW)) .>> semiColon) .>> IW |>> Ast.VarDeclBlock 

let varDeclOrSpecList = opt (many1 (varDeclBlock)) 
let spacesPredicate = IW >>. predicate
let premiseList = positions (IW >>. (keywordPremise >>. colon >>. predicateList)) |>> Ast.PremiseList
let conclusion = IW >>. (keywordConclusion >>. colon >>. predicate)
let insideRuleOfOnference = (varDeclOrSpecList .>>. (premiseList .>>. conclusion))
let premiseConclusionBlock = leftBracePos .>>. insideRuleOfOnference .>>. spacesRightBrace |>> Ast.PremiseConclusionBlock

(* FPL building blocks - rules of reference *)
let keywordInference = (skipString LiteralInfL <|> skipString LiteralInf) .>> SW 
let ruleOfInferenceSignature = positions (keywordInference >>. pascalCaseId) .>> IW |>> Ast.RuleOfInferenceSignature
let ruleOfInference = positions (ruleOfInferenceSignature .>>. premiseConclusionBlock) |>> Ast.RuleOfInference

(* FPL building blocks - Theorem-like statements and conjectures *)
let keywordTheorem = (skipString LiteralThmL <|> skipString LiteralThm) .>> SW
let keywordLemma = (skipString LiteralLemL <|> skipString LiteralLem) .>> SW
let keywordProposition = (skipString LiteralPropL <|> skipString LiteralProp) .>> SW
let keywordCorollary = (skipString LiteralCorL <|> skipString LiteralCor) .>> SW
let keywordConjecture = (skipString LiteralConjL <|> skipString LiteralConj) .>> SW

let theoremLikeBlock = leftBracePos .>>. (varDeclOrSpecList .>>. spacesPredicate) .>>. spacesRightBrace
